angular project added

--- a/Enquiry.API/appsettings.json
+++ b/Enquiry.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionString": "Server=DESKTOP-14420OK;Database=EnquiryDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=true"
+    "ConnectionString": "Server=L-;Database=EnquiryDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=true"
   }
 }
